--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -63,16 +63,23 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   <div class="mb-5">
     <div class="text-3xl w-full font-bold">Employment history </div>
   </div>
-  <div class="time-line-container mb-10">
+ 
+ 
+ <div class="time-line-container mb-10">
+     <TimeLineElement
+      title="EFSA - Scientific and Technical Support Panel"
+      subtitle="From 2023 to 2027"
+      desc="European Food & Safety Authority (EFSA). 5-year mandate as scientific and technical support"
+    />
     <TimeLineElement
       title="Postdoctoral fellow - Langlet's laboratory"
       subtitle="From 2021 at University of Lausanne, Switzerland"
-      desc="Role as bioinformatician and biologist, development of novel methods to decipher the role of cell-cell communication in the neuroendocrine control of energy balance. Technologies: scRNAseq, transcriptomics, tracing, cell-cell communication, R, Python, HPC, machine learning."
+      desc="Role as bioinformatician / biologist, development of novel methods to decipher the role of cell-cell communication in the neuroendocrine control of energy balance. Technologies: scRNAseq, transcriptomics, tracing, cell-cell communication, R, Python, HPC, machine learning"
     />
     <TimeLineElement
       title="Postdoctoral fellow - H2020 FREIA Project"
       subtitle="From 2020 to 2021 at University of Liege, Belgium"
-      desc="Data analysis of transcriptomics and biological data to decipher neuroendocrine biomarkers of Endocrine Disrupting Chemical developmental exposures. Technologies: RNAseq, transcriptomics, data analysis, R, Python"
+      desc="Role as toxicologist / biologist / bioinformatician. Data analysis of transcriptomics and biological data to decipher neuroendocrine biomarkers of Endocrine Disrupting Chemical developmental exposures Technologies: RNAseq, transcriptomics, data analysis, R, Python"
     />
   </div>
 
@@ -86,7 +93,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     />
      
      <TimeLineElement
-      title="Micro-bachelor degree (60 ECTS) in Sustainability and Strategies Against Climate Change"
+      title="Bachelor degree in Sustainability and Strategies Against Climate Change (60 ECTS)"
       subtitle="2023-Today at UNED, Spain"
     />
     <TimeLineElement
@@ -97,10 +104,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       title="M.Sc. in Experimental Neuroscience"
       subtitle="2013 to 2015 at University of Liege (ULIEGE), Belgium"
     />
-       <TimeLineElement
-      title="B.Sc. Degree in Psychology"
-      subtitle="2008 to 2013 at University of La Laguna, Canary Islands, Spain"
-    />
+
   </div>
 
   
