--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -93,7 +93,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     />
      
      <TimeLineElement
-      title="Bachelor degree in Sustainability and Strategies Against Climate Change (60 ECTS)"
+      title="Bachelor degree in Sustainability and Strategies Against Climate Change (54 ECTS)"
       subtitle="2023-Today at UNED, Spain"
     />
     <TimeLineElement
@@ -193,6 +193,9 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     </li>
     <li>
       <a href="https://www.frontiersin.org/journals/psychiatry" target="_blank">Reviewer for Frontiers in Psychiatry</a>
+    </li
+      <li>
+      <a href="https://www.frontiersin.org/journals/behavioral-neuroscience" target="_blank">Reviewer for Frontiers in Behavioral Neuroscience</a>
     </li>
    
   </ul>
