--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -91,11 +91,6 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       title="MAS in Toxicology. Risk Assessment, Clinic Toxicology and Ecotoxicology Modules (11 ECTS)"
       subtitle="2023-Today at University of Geneva (UNIGE), Switzerland"
     />
-     
-     <TimeLineElement
-      title="Bachelor degree in Sustainability and Strategies Against Climate Change (54 ECTS)"
-      subtitle="2023-Today at UNED, Spain"
-    />
     <TimeLineElement
       title="PhD in Biomedical Sciences"
       subtitle= "2016 to 2020 at University of Liege (ULIEGE), Belgium" 
@@ -154,6 +149,10 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <div class="text-3xl w-full font-bold">Continuous Education</div>  </div> 
   <ul class="list-disc mx-6 mb-10 grid gap-2"> 
   
+  <li> <a target="_blank">Environmental Legislation. UNED, Spain (6 ECTS) </a> </li>
+  <li> <a target="_blank">Economics & Environmental Strategy. UNED, Spain (6 ECTS) </a> </li>
+  <li> <a target="_blank">Ecology: Environment and Society. UNED, Spain (6 ECTS) </a> </li>
+  <li> <a target="_blank">Human Ecology. UNED, Spain (6 ECTS) </a> </li>
   <li> <a target="_blank">Environmental History. University of Gothenburg, Sweden (15 ECTS) </a> </li>
   <li> <a target="_blank">UCREATE2. Workshop on sustainable entrepreneurship (7 weeks)</a> </li>
   <li> <a target="_blank">Machine learning. Swiss Institute of Bioinformatics (SIB) (0.5ECTS)</a> </li>
