--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -187,6 +187,10 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <div class="text-3xl w-full font-bold">Peer-reviewing</div>
   </div>
   <ul class="list-disc mx-6 mb-10 grid gap-2">
+  <li>
+      <a href="https://www.cell.com/molecular-therapy-family/home" target="_blank">Reviewer for CellPress Molecular Therapy </a>
+    </li>
+
    <li>
       <a href="https://www.karger.com/journal/home/223855" target="_blank">Reviewer for Neuroendocrinology</a>
     </li>
