--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -27,9 +27,9 @@ import HorizontalCard from "../components/HorizontalCard.astro";
      <div class="text-2xl w-full font-bold mb-0 mt-10">Manuscripts in preparation <font size="2"> (as of 05/23) </font>    </div>
   <div class="divider my-0"></div>
   
-<div class="text-lg"> <p align="justify"> Brunner M*, <u>Lopez-Rodriguez D</u>*, Messina A, Thorens B, Santoni F, Langlet F. <i> Pseudospatial transcriptional gradient analysis of hypothalamic ependymal cells challenges tanycyte classification. </i>  </p> </div>
+<div class="text-lg"> <p align="justify"> Brunner M*, <u>Lopez-Rodriguez D</u>*, Messina A, Thorens B, Santoni F, Langlet F. <i> Pseudospatial transcriptional gradient analysis of hypothalamic ependymal cells challenges tanycyte classification. Submitted to Cell Metabolism. </i>  </p> </div>
 <div class="text-lg"> <p align="justify" style="margin-left: 20px">  &#8594; *Co-first authorship</p> </div>
-<div class="text-lg"> <p align="justify" style="margin-left: 20px"> <b>  &#8594; ...BioRxiv preprint coming soon...</b> </p> </div>
+<div class="text-lg"> <p align="justify" style="margin-left: 20px"> <b>  &#8594; BioRxiv preprint: https://www.biorxiv.org/content/10.1101/2023.07.06.547914v1 </b> </p> </div>
 <br>
 
 <div class="text-lg"> <p align="justify"> <u>Lopez-Rodriguez D</u> & Guerrero-Limon, G. <i> Harnessing the power of Artificial Intelligence (AI) to generate innovative New Alternative Methodologies (NAMs) to improve chemical regulatory risk assessment.</i>  </p> </div><br>
