--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -87,7 +87,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
  <div class="text-lg"><p align="justify"><u>Lopez-Rodriguez D</u>.<i> An Environmental History Perspective on Sustainable Economic Growth. May 13, 2023. </i>
  </p>
-  <a href="/DLopez_Growth.pdf" target="_blank"><text class="text-lg"> <b>Download</b> </text></p></a>
+  <a href=" " target="_blank"><text class="text-lg"> <b>Download</b> </text></p></a>
 
 
 
