--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -209,6 +209,9 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
   <ul class="list-disc mx-6 mb-10 grid gap-2">
     <li>
+      <a href="https://www.endocrinology.org/" target="_blank">2023-Today: Member of the Swiss Society of Toxicology </a>
+    </li>
+    <li>
       <a href="https://www.endocrinology.org/" target="_blank">2023-Today: Member of the Society for Endocrinology (UK)</a>
     </li>
     <li>
