--- a/src/pages/Contact.astro
+++ b/src/pages/Contact.astro
@@ -23,7 +23,7 @@ const last_posts = posts.slice(0, 3);
 
  
 <div class="social-icons px-6 my-2 py-2 flex">
-		<a href="david.lopezrodriguez@unil.ch" target="_blank" class="mx-3" aria-label="Email" title="Email">
+		<a href="mailto:david.lopezrodriguez@unil.ch" target="_blank" class="mx-3" aria-label="Email" title="Email">
 				<svg
 				  xmlns="http://www.w3.org/2000/svg"
 				  width="24"
