--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -27,7 +27,13 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   <div class="mb-10">
     <div class="mb-5"><div class="text-3xl w-full font-bold">Skills</div> </div>
   <ul class="list-disc md:columns-3 columns-1 mx-6">
-    <li>Toxicology</li>
+    <li>Toxicology
+             <ol style="list-style-type: lower-alpha; padding-bottom: 0;">
+                  <li style="margin-left:2em">Sub of Second</li>
+                  <li style="margin-left:2em; padding-bottom: 0;">Another Sub</li>
+             </ol>
+    
+    </li>
     <li>Computational biology</li>
     <li>Molecular biology</li>
     <li>Bioinformatics</li>
