--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -28,7 +28,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <div class="mb-5"><div class="text-3xl w-full font-bold">Skills</div> </div>
   <ul class="list-disc md:columns-3 columns-1 mx-6">
     <li>Toxicology
-             <ol style="list-style-type: lower-alpha; padding-bottom: 0;">
+             <ol style="list-style-type: circle; padding-bottom: 0;">
                   <li style="margin-left:2em">Sub of Second</li>
                   <li style="margin-left:2em; padding-bottom: 0;">Another Sub</li>
              </ol>
