--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -27,42 +27,53 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   <div class="mb-10">
     <div class="mb-5"><div class="text-3xl w-full font-bold">Skills</div> </div>
   <ul class="list-disc md:columns-3 columns-1 mx-6">
-    <li>Toxicology
-             <ol style="list-style-type: circle; padding-bottom: 0;">
-                  <li style="margin-left:2em">Sub of Second</li>
-                  <li style="margin-left:2em; padding-bottom: 0;">Another Sub</li>
+
+    <li><b>Toxicology </b></li>
+    <li><b>Biostatistics / Advanced Statistics</b></li>
+    <li><b>Epidemiology</b></li>
+    <li><b>Bioinformatics & computational biology</b>
+            <ol style="list-style-type: circle; padding-bottom: 0;">
+                  <li style="margin-left:2em">Multiomics: scRNAseq, ChIPSeq,...</li>
+                  <li style="margin-left:2em; padding-bottom: 0;">R (RStudio)</li>
+                  <li style="margin-left:2em; padding-bottom: 0;">Python (Anaconda, PyCharm)</li>
+                  <li style="margin-left:2em; padding-bottom: 0;">C++</li>
+                  <li style="margin-left:2em; padding-bottom: 0;">UNIX/Shell</li>
+                  <li style="margin-left:2em; padding-bottom: 0;">High-performance Computing (HPC)</li>
+                  <li style="margin-left:2em; padding-bottom: 0;">Machine Learning</li>
+                  <li style="margin-left:2em; padding-bottom: 0;">RShiny</li>
+                  <li style="margin-left:2em; padding-bottom: 0;">Version Control (Git)</li>
              </ol>
-    
     </li>
-    <li>Computational biology</li>
-    <li>Molecular biology</li>
-    <li>Bioinformatics</li>
-    <li>Risk asessment</li>
-    <li>Neuroendocrinology</li>
-    <li>Epigenetics</li>
-    <li>Advanced Statistics</li>
-    <li>Chemo-informatics</li>
-    <li>Physiology</li>
-    <li>R (RStudio)</li>
-    <li>Python (Anaconda, PyCharm)</li>
-    <li>UNIX/Shell</li>
-    <li>High-perf. computing (HPC)</li>
-    <li>Machine learning</li>
-    <li>QSAR</li>
-    <li>In silico methods</li>
-    <li>Version control (Git)</li>
-    <li>Adobe Photoshop</li>
-    <li>Web design </li>
-    <li>scRNAseq</li>
-    <li>RNAseq</li>
-    <li>qPCR</li>
-    <li>FACS</li>
-    <li>ChipSEQ</li>
-    <li>Cut&Run</li>
-    <li>IHC</li>
-    <li>WB</li>
-    <li>Microscopy</li>
-    <li>ELISA</li>
+
+
+    <li><b>Molecular biology & Epigenetics</b>
+            <ol style="list-style-type: circle; padding-bottom: 0;">
+                  <li style="margin-left:2em">qPCR, CUT&RUN, FACS,...</li>
+             </ol>
+    </li>
+
+    <li><b>Chemo-informatics</b>
+                <ol style="list-style-type: circle; padding-bottom: 0;">
+                  <li style="margin-left:2em">QSAR</li>
+                   <li style="margin-left:2em">In Silico Methods</li>
+             </ol></li>
+
+    <li><b>Neuroendocrinology & Physiology</b>
+             <ol style="list-style-type: circle; padding-bottom: 0;">
+                    <li style="margin-left:2em">ICH, WB, Microscopy, ELISA,...</li>
+             </ol></li>
+
+    <li><b>Web design</b>
+             <ol style="list-style-type: circle; padding-bottom: 0;">
+                    <li style="margin-left:2em">RShiny</li>
+                    <li style="margin-left:2em">WordPress</li>
+                    <li style="margin-left:2em"> Photoshop, InDesign, Illustrator</li>
+                    <li style="margin-left:2em">Scientific Illustration</li>
+             </ol></li>
+
+
+
+    <li><b>Scientific writing</b></li>
   </ul>
     </div>
 
