--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -26,7 +26,20 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <div class="mb-10">
     <div class="mb-5"><div class="text-3xl w-full font-bold">Skills</div> </div>
-  <ul class="list-disc md:columns-3 columns-1 mx-6">
+
+    <div class="row">
+        <div class="column" style="background-color:#FFB695;">
+            <h2>Column 1</h2>
+            <p>Data..</p>
+        </div>
+        <div class="column" style="background-color:#96D1CD;">
+            <h2>Column 2</h2>
+            <p>Data..</p>
+        </div>
+    </div>
+
+
+  <ul class="list-disc md:columns-2 columns-1 mx-6">
 
     <li><b>Toxicology </b></li>
     <li><b>Biostatistics / Advanced Statistics</b></li>
