--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -2,6 +2,23 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import TimeLineElement from "../components/cv/TimeLine.astro";
 ---
+<style>
+    {
+        box-sizing: border-box;
+    }
+    /* Set additional styling options for the columns*/
+    .column {
+    float: left;
+    width: 50%;
+    }
+
+    .row:after {
+    content: "";
+    display: table;
+    clear: both;
+    }
+    </style>
+
 
 <BaseLayout title = "CV - David Lopez Rodriguez">
 
@@ -27,16 +44,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   <div class="mb-10">
     <div class="mb-5"><div class="text-3xl w-full font-bold">Skills</div> </div>
 
-    <div class="row">
-        <div class="column" style="background-color:#FFB695;">
-            <h2>Column 1</h2>
-            <p>Data..</p>
-        </div>
-        <div class="column" style="background-color:#96D1CD;">
-            <h2>Column 2</h2>
-            <p>Data..</p>
-        </div>
-    </div>
+
 
 
   <ul class="list-disc md:columns-2 columns-1 mx-6">
