--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -102,6 +102,12 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
  
  
  <div class="time-line-container mb-10">
+   <TimeLineElement
+      title="Project Coordinator - Pesticide Monitoring "
+      subtitle="From 2024 - Today at Environmental Science & Research Consulting"
+      desc="Project COordinator of the project 'Pesticide Exposure Assessment of the Swiss Non-Occupational Sensitive Population'"
+    />
+
      <TimeLineElement
       title="EFSA - Scientific and Technical Support Panel"
       subtitle="From 2023 to 2027"
