--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -105,7 +105,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
    <TimeLineElement
       title="Project Coordinator - Pesticide Monitoring "
       subtitle="From 2024 - Today at Environmental Science & Research Consulting"
-      desc="Project COordinator of the project 'Pesticide Exposure Assessment of the Swiss Non-Occupational Sensitive Population'"
+      desc="Project Coordinator of the project 'Pesticide Exposure Assessment of the Swiss Non-Occupational Sensitive Population' https://www.pestizidmonitoring.ch/"
     />
 
      <TimeLineElement
