--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -149,19 +149,29 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <div class="text-3xl w-full font-bold">Teaching experience</div>
   </div>
   <div class="time-line-container grid gap-4 mb-10">
-     <TimeLineElement
+    <TimeLineElement
       title="Lecture on 'Endocrine Disrupting Chemicals (EDCs)'"
-      subtitle="Participation in the course 'Impact of pollution on Human Health' -  University of Lausanne, Switzerland"
+      subtitle="2024 - Participation in the course 'Impact of pollution on Human Health' -  University of Lausanne, Switzerland"
       desc="Course for students at the Medicine and Nursing school. Invited by Dr. Busiah Kanetee & Dr. Aurélie Berthet"
     />
     <TimeLineElement
       title="Lecture on 'Human Toxicology'"
-      subtitle= "Participation in the course 'Environmental Toxicology' - University of Lausanne, Switzerland" 
+      subtitle= "2023 - Participation in the course 'Environmental Toxicology' - University of Lausanne, Switzerland" 
+      desc="Course for master students at the Faculty of Environmental Sciences. Invited by Dr. Nathalie Chèvre"
+    />
+    <TimeLineElement
+      title="Lecture on 'Endocrine Disrupting Chemicals (EDCs)'"
+      subtitle="2023 - Participation in the course 'Impact of pollution on Human Health' -  University of Lausanne, Switzerland"
+      desc="Course for students at the Medicine and Nursing school. Invited by Dr. Busiah Kanetee & Dr. Aurélie Berthet"
+    />
+    <TimeLineElement
+      title="Lecture on 'Human Toxicology'"
+      subtitle= "2022 - Participation in the course 'Environmental Toxicology' - University of Lausanne, Switzerland" 
       desc="Course for master students at the Faculty of Environmental Sciences. Invited by Dr. Nathalie Chèvre"
     />
     <TimeLineElement
       title="Lecture on 'Female puberty: the role of epigenetics and environmental factors'"
-      subtitle= "Participation in the course 'Neuroendocrinology' - National Autonomous University of Mexico (UNAM), Mexico" 
+      subtitle= "2020 - Participation in the course 'Neuroendocrinology' - National Autonomous University of Mexico (UNAM), Mexico" 
       desc="Course for master students at the Faculty of Biomedical Sciences. Invited by Dr. Rebeca Corona"
     />
   </div>
@@ -170,6 +180,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <div class="text-3xl w-full font-bold">Awards, Grants and Fellowships</div>
   </div>
   <div class="time-line-container grid gap-4 mb-10">
+     <TimeLineElement title="Excellence Postdoctoral Fellowship"  subtitle="2023 - Wallonie-Bruxelles Federation (FWB, Belgium)" />
      <TimeLineElement title="Ph.D. Thesis Award"  subtitle="2021 - Society of Neuroendocrinology (SNE, France)" />
      <TimeLineElement title="Postdoctoral Travel Grant"  subtitle="2021 - Léon Fredericq Foundation (FLF, Belgium) for carrying out postdoctoral research at the laboratory of Fanny Langlet (UNIL, Lausanne, Switzerland)" />
      <TimeLineElement title="Short-term Postdoctoral Grant"  subtitle="2021 - Wallonie-Bruxelles Federation (FWB, Belgium)  for carrying out postdoctoral research at the laboratory of Fanny Langlet (UNIL, Lausanne, Switzerland)" />
@@ -229,6 +240,11 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <div class="text-3xl w-full font-bold">Peer-reviewing</div>
   </div>
   <ul class="list-disc mx-6 mb-10 grid gap-2">
+
+    <li>
+      <a href="https://www.nature.com/srep/" target="_blank">Reviewer for Nature Scientific Reports </a>
+    </li>
+
   <li>
       <a href="https://www.cell.com/molecular-therapy-family/home" target="_blank">Reviewer for CellPress Molecular Therapy </a>
     </li>
