--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -180,7 +180,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <div class="text-3xl w-full font-bold">Awards, Grants and Fellowships</div>
   </div>
   <div class="time-line-container grid gap-4 mb-10">
-     <TimeLineElement title="Excellence Postdoctoral Fellowship"  subtitle="2023 - Wallonie-Bruxelles Federation (FWB, Belgium)" />
+     <TimeLineElement title="Postdoctoral Fellowship"  subtitle="2023 - Wallonie-Bruxelles Federation (FWB, Belgium)" />
      <TimeLineElement title="Ph.D. Thesis Award"  subtitle="2021 - Society of Neuroendocrinology (SNE, France)" />
      <TimeLineElement title="Postdoctoral Travel Grant"  subtitle="2021 - Léon Fredericq Foundation (FLF, Belgium) for carrying out postdoctoral research at the laboratory of Fanny Langlet (UNIL, Lausanne, Switzerland)" />
      <TimeLineElement title="Short-term Postdoctoral Grant"  subtitle="2021 - Wallonie-Bruxelles Federation (FWB, Belgium)  for carrying out postdoctoral research at the laboratory of Fanny Langlet (UNIL, Lausanne, Switzerland)" />
@@ -218,73 +218,41 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   <li> <a target="_blank">Statistics 1. Resal, University of Lausanne (Switzerland) (1 day)  </a> </li>
   <li> <a target="_blank"> Statistics 2. Resal, University of Lausanne (Switzerland) (1 day) </a> </li>
   </ul>
-     <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Participation in conferences</div>
-  </div>
-  <div class="time-line-container grid gap-4 mb-10">
-     <TimeLineElement title="Society for Neuroendocrinology meeting (SNE)"  subtitle="2021 -  Oral communication - Online" />
-     <TimeLineElement title="Society for Behavioral Neuroendocrinology meeting (SBN)"  subtitle="2019 - Poster presentation - Bloomington, Indiana, USA" />
-     <TimeLineElement title="European Congress for Endocrinology (ECE)"  subtitle="2019 - Oral communication  - Lyon, France" />
-      <TimeLineElement title="Endocrine Society meeting"  subtitle="2019 - Oral communication - New Orleans, Louisiana, USA" />
-     <TimeLineElement title="Pan American Neuroendocrine Society (PANS)"  subtitle="2019 - Oral communication - New Orleans, Louisiana, USA" />
-      <TimeLineElement title="International Congress for Neuroendocrinology (ICN) "  subtitle="2018 - Oral communication - Toronto, Canada" />
-     <TimeLineElement title="European Doctoral College on Environment and Health meeting (EDCEH)"  subtitle="2018 - Oral communication - Rennes, France" />
-      <TimeLineElement title="International Days of Toxicology  (JIT)"  subtitle="2017 - Oral communication - Liège, Belgium" />
-     <TimeLineElement title="Copenhagen Workshop on Endocrine Disruptors (COW)"  subtitle="2017 - Oral communication - Copenhaguen, Denmark" />
-      <TimeLineElement title="EURON Ph.D. days"  subtitle="2016 - Poster presentation - Lille, France" />
-     <TimeLineElement title="Society for Neuroendocrinology meeting (SNE)"  subtitle="2016 -  Oral communication - Corte, Corsica, France" />
-  </div>
+  
+  <div class="mb-5"><div class="text-3xl w-full font-bold">Participation in conferences</div></div>
+      <div class="time-line-container grid gap-4 mb-10">
+             <TimeLineElement title="Society for Neuroendocrinology meeting (SNE)"  subtitle="2021 -  Oral communication - Online" />
+             <TimeLineElement title="Society for Behavioral Neuroendocrinology meeting (SBN)"  subtitle="2019 - Poster presentation - Bloomington, Indiana, USA" />
+             <TimeLineElement title="European Congress for Endocrinology (ECE)"  subtitle="2019 - Oral communication  - Lyon, France" />
+             <TimeLineElement title="Endocrine Society meeting"  subtitle="2019 - Oral communication - New Orleans, Louisiana, USA" />
+             <TimeLineElement title="Pan American Neuroendocrine Society (PANS)"  subtitle="2019 - Oral communication - New Orleans, Louisiana, USA" />
+             <TimeLineElement title="International Congress for Neuroendocrinology (ICN) "  subtitle="2018 - Oral communication - Toronto, Canada" />
+             <TimeLineElement title="European Doctoral College on Environment and Health meeting (EDCEH)"  subtitle="2018 - Oral communication - Rennes, France" />
+             <TimeLineElement title="International Days of Toxicology  (JIT)"  subtitle="2017 - Oral communication - Liège, Belgium" />
+             <TimeLineElement title="Copenhagen Workshop on Endocrine Disruptors (COW)"  subtitle="2017 - Oral communication - Copenhaguen, Denmark" />
+             <TimeLineElement title="EURON Ph.D. days"  subtitle="2016 - Poster presentation - Lille, France" />
+             <TimeLineElement title="Society for Neuroendocrinology meeting (SNE)"  subtitle="2016 -  Oral communication - Corte, Corsica, France" />
+      </div>
 
 
-   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Peer-reviewing</div>
-  </div>
-  <ul class="list-disc mx-6 mb-10 grid gap-2">
+   <div class="mb-5"><div class="text-3xl w-full font-bold">Peer-reviewing</div></div>
+          <ul class="list-disc mx-6 mb-10 grid gap-2">
+                   <li><a href="https://www.nature.com/srep/" target="_blank">Reviewer for Nature Scientific Reports </a> </li>
+                   <li><a href="https://www.cell.com/molecular-therapy-family/home" target="_blank">Reviewer for CellPress Molecular Therapy </a></li>
+                   <li><a href="https://www.karger.com/journal/home/223855" target="_blank">Reviewer for Neuroendocrinology</a></li>
+                   <li><a href="https://www.frontiersin.org/journals/psychiatry" target="_blank">Reviewer for Frontiers in Psychiatry</a></li
+                   <li><a href="https://www.frontiersin.org/journals/behavioral-neuroscience" target="_blank">Reviewer for Frontiers in Behavioral Neuroscience</a></li>
+          </ul>
 
-    <li>
-      <a href="https://www.nature.com/srep/" target="_blank">Reviewer for Nature Scientific Reports </a>
-    </li>
-
-  <li>
-      <a href="https://www.cell.com/molecular-therapy-family/home" target="_blank">Reviewer for CellPress Molecular Therapy </a>
-    </li>
-
-   <li>
-      <a href="https://www.karger.com/journal/home/223855" target="_blank">Reviewer for Neuroendocrinology</a>
-    </li>
-    <li>
-      <a href="https://www.frontiersin.org/journals/psychiatry" target="_blank">Reviewer for Frontiers in Psychiatry</a>
-    </li
-      <li>
-      <a href="https://www.frontiersin.org/journals/behavioral-neuroscience" target="_blank">Reviewer for Frontiers in Behavioral Neuroscience</a>
-    </li>
-   
-  </ul>
-
-
-     <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Active membership</div>
-  </div>
-  <ul class="list-disc mx-6 mb-10 grid gap-2">
-    <li>
-      <a href="https://www.swisstox.ch/" target="_blank">2023-Today: Member of the Swiss Society of Toxicology </a>
-    </li>
-    <li>
-      <a href="https://www.endocrinology.org/" target="_blank">2023-Today: Member of the Society for Endocrinology (UK)</a>
-    </li>
-    <li>
-      <a href="https://www.neuroendocrinologie.fr/" target="_blank">2016-Today: Member of the Society for Neuroendocrinology (France)</a>
-    </li>
-        <li>
-      <a href="https://www.endocrine.org/" target="_blank">2018-2021: Member of the Endocrine Society (USA)</a>
-    </li>
-        <li>
-      <a href="https://www.ese-hormones.org/" target="_blank">2018-2020: Member of the European Society for Endocrinology (EU)</a>
-    </li>
-        <li>
-      <a href="https://sbn.org/home.aspx" target="_blank">2018-2020: Member of the Society for Behavioral Neuroendocrinology (USA)</a>
-      </li>
-  </ul>
+     <div class="mb-5"> <div class="text-3xl w-full font-bold">Active membership</div></div>
+          <ul class="list-disc mx-6 mb-10 grid gap-2">
+                    <li><a href="https://www.swisstox.ch/" target="_blank">2023-Today: Member of the Swiss Society of Toxicology </a></li>
+                    <li> <a href="https://www.endocrinology.org/" target="_blank">2023-Today: Member of the Society for Endocrinology (UK)</a></li>
+                    <li> <a href="https://www.neuroendocrinologie.fr/" target="_blank">2016-Today: Member of the Society for Neuroendocrinology (France)</a> </li>
+                    <li><a href="https://www.endocrine.org/" target="_blank">2018-2021: Member of the Endocrine Society (USA)</a></li>
+                    <li> <a href="https://www.ese-hormones.org/" target="_blank">2018-2020: Member of the European Society for Endocrinology (EU)</a></li>
+                    <li><a href="https://sbn.org/home.aspx" target="_blank">2018-2020: Member of the Society for Behavioral Neuroendocrinology (USA)</a></li>
+          </ul>
 
 
 
