--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -39,7 +39,9 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <li><b>Toxicology </b></li>
         <div style="line-height:60%;"> <br></div>
     <li><b>Biostatistics / Advanced Statistics</b></li>
+     <div style="line-height:60%;"> <br></div>
     <li><b>Epidemiology</b></li>
+     <div style="line-height:60%;"> <br></div>
     <li><b>Bioinformatics & computational biology</b>
             <ol style="list-style-type: circle; padding-bottom: 0;">
                   <li style="margin-left:2em">Multiomics: scRNAseq, ChIPSeq,...</li>
@@ -60,18 +62,18 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
                   <li style="margin-left:2em">qPCR, CUT&RUN, FACS,...</li>
              </ol>
     </li>
-
+     <div style="line-height:60%;"> <br></div>
     <li><b>Chemo-informatics</b>
                 <ol style="list-style-type: circle; padding-bottom: 0;">
                   <li style="margin-left:2em">QSAR</li>
                    <li style="margin-left:2em">In Silico Methods</li>
              </ol></li>
-
+              <div style="line-height:60%;"> <br></div>
     <li><b>Neuroendocrinology & Physiology</b>
              <ol style="list-style-type: circle; padding-bottom: 0;">
                     <li style="margin-left:2em">ICH, WB, Microscopy, ELISA,...</li>
              </ol></li>
-
+              <div style="line-height:60%;"> <br></div>
     <li><b>Web design</b>
              <ol style="list-style-type: circle; padding-bottom: 0;">
                     <li style="margin-left:2em">RShiny</li>
@@ -79,7 +81,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
                     <li style="margin-left:2em"> Photoshop, InDesign, Illustrator</li>
                     <li style="margin-left:2em">Scientific Illustration</li>
              </ol></li>
-
+              <div style="line-height:60%;"> <br></div>
     <li><b>Scientific writing</b></li>
   </ul>
     </div>
