--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -30,7 +30,14 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <div class="mb-5"><div class="text-3xl w-full font-bold">Profile</div></div>
 
-  <div class="mb-5 text-justify">Experienced and multidisciplinary scientist with a background in toxicology, biology, environmental and computational sciences. My main objective is to develop computational and bioinformatic tools that can expand scientific knowledge and make a valuable contribution to public health and society. </div>
+  <div class="mb-5 text-justify">
+  
+  Experienced and multidisciplinary scientist with a background in toxicology, biology, environmental 
+  and computational sciences. My main objective is to develop computational and bioinformatic tools that 
+  can expand scientific knowledge and make a valuable contribution to public health and society. My goal 
+  is to achieve a comprehensive understanding of the biological mechanisms and risks associated with 
+  various exposures to humans and the environment.
+  </div>
 
   <div class="mb-10"><div class="mb-5"><div class="text-3xl w-full font-bold">Skills</div> </div>
 
@@ -95,7 +102,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
    <TimeLineElement
       title="Project Coordinator - Pesticide Monitoring "
       subtitle="From 2024 - Today at Environmental Science & Research Consulting"
-      desc="Project Coordinator of the project 'Pesticide Exposure Assessment of the Swiss Non-Occupational Sensitive Population' https://www.pestizidmonitoring.ch/"
+      desc="Project Coordinator of the project 'Pesticide Exposure Assessment of the Swiss Non-Occupational Sensitive Population' (www.pestizidmonitoring.ch)"
     />
 
      <TimeLineElement
