--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const last_posts = posts.slice(0, 3);
 
     <div class="pb-12 mt-5">
           <div class="text-4xl font-bold">David Lopez Rodriguez, PhD</div>
-          <div class="text-2xl py-2 font-bold">Research fellow - University of Lausanne</div>
+          <div class="text-2xl py-2 font-bold">Researcher at University of Lausanne & Independent Bioinformatics and Environmental Consultant </div>
 
    
 
@@ -38,11 +38,12 @@ const last_posts = posts.slice(0, 3);
               </p> </text> </div>
 
            <div class="py-4">
-           <text class="text-lg"><p align="justify">  <b>	Disciplines:</b> Toxicology, Bioinformatics, Endocrinology, Environmental Science, Public Health, Chemical Risk assessment. </p> </text>
+           <text class="text-lg"><p align="justify">  <b>	Disciplines:</b> 
+           Bioinformatics/Biostatistics, Toxicology, Endocrinology, Environmental Science, Environmental Epidemiology, Chemical Risk assessment. </p> </text>
            </div>
            
   
-           <text class="text-lg"><p align="justify">  <b>	Skills and expertise:</b> Bioinformatics, Chemo-informatics, Neuroendocrinology, Environmental Sciences, Environmental Health, Endocrine Disruption, Toxicology, Computational Biology, Adverse outcome pathways, Chemical Risk Assessment, Environmental Pollution, Data Analysis, Estrogens, Molecular Biology, Physiology, Reproductive Toxicology, Xenobiotics.  </p> </text>
+           <text class="text-lg"><p align="justify">  <b>	Expertise Keywords:</b> Bioinformatics, Chemo-informatics, Neuroendocrinology, Environmental Sciences, Environmental Health, Endocrine Disruption, Toxicology, Computational Biology, Adverse outcome pathways, Chemical Risk Assessment, Environmental Pollution, Data Analysis, Estrogens, Molecular Biology, Physiology, Reproductive Toxicology, Xenobiotics.  </p> </text>
        
 
 
@@ -54,6 +55,17 @@ const last_posts = posts.slice(0, 3);
         <div>
           <div class="text-3xl w-full font-bold mb-2">Current projects </div>
         </div>
+
+        <HorizontalCard
+          title="Pesticide Exposure Assessment of the Swiss Sensitive Population"
+          img="/Tmap.png"
+          desc="Keywords: Environmental Contaminants, Pesticides, Toxicology, Exposure Assessment, Bio-samples, Exposure Mixtures, Exposure Sources, Endocrine Disruptors, Risk Assessment, Environmental Science."
+          id="p1" 
+          url="/p1/"
+        />
+
+
+        <div class="divider my-0"></div>
 
         <HorizontalCard
           title="A framework for identifying and prioritizing the risk asessment of Endocrine Disrupting Chemicals (EDCs)"
