--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -20,7 +20,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <div class="mb-5 text-justify">
   
-  Experienced and multidisciplinary scientist with a background in toxicology, biology, environmental 
+  Experienced and multidisciplinary scientist & consultant with a background in toxicology, biology, environmental 
   and computational sciences. My main objective is to develop computational and bioinformatic tools that 
   can expand scientific knowledge and make a valuable contribution to public health and society. My goal 
   is to achieve a comprehensive understanding of the biological mechanisms and risks associated with 
@@ -87,9 +87,13 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
  
  
  <div class="time-line-container mb-10">
+      <TimeLineElement
+      title="Bioinformatics & Environmental Science Consultant"
+    />
+
    <TimeLineElement
       title="Project Coordinator - Pesticide Monitoring "
-      subtitle="From 2024 - Today at Environmental Science & Research Consulting"
+      subtitle="From 2024 - Today at Environmental Science & Research Consulting (as Independent Consultant)"
       desc="Project Coordinator of the project 'Pesticide Exposure Assessment of the Swiss Non-Occupational Sensitive Population' (www.pestizidmonitoring.ch)"
     />
 
