--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,19 +22,30 @@ const last_posts = posts.slice(0, 3);
   gtag('config', 'G-B2JEVNPCKR');
 </script>
 
-
-
     <div class="pb-12 mt-5">
           <div class="text-4xl font-bold">David Lopez Rodriguez, PhD</div>
-          <div class="text-2xl py-2 font-bold">Researcher at University of Lausanne & Independent Bioinformatics and Environmental Consultant </div>
-
-   
-
+          <div class="text-2xl py-2 font-bold">Research Fellow - University of Lausanne & Independent Consultant </div>
 
 
           <div class="py-2"><text class="text-lg"> <p align="justify">
-              As a multidisciplinary researcher, my focus lies in creating computational tools allowing to advance scientific knowledge to improve public health and environmental policies. Today, with an expertise in biology, toxicology, environmental and computational sciences, I strive to develop a comprehensive understanding of the risks associated with chemical exposures and gain an understanding on the biological process involved in the control of metabolism.            
+              I am multidisciplinary researcher with an expertise in biology, toxicology, 
+              environmental and computational sciences.
+
+              As a researcher my focus lies in creating computational tools allowing to 
+              advance scientific knowledge to improve public health and environmental 
+              policies. I strive to develop a comprehensive understanding of the risks 
+              associated with chemical exposures and gain an understanding on the biological 
+              process involved in the control of metabolism.            
             
+              As an independent consultant, I offer my expertise in biostatistics, 
+              bioinformatics, and advanced statistics to scientists and industries. 
+              My skill set encompasses a spectrum of offerings, ranging from meticulous 
+              data analysis, especially in omics data, to intricate statistical modeling, 
+              as well as the creation of insightful data visualizations and their subsequent 
+              interpretation.
+
+
+
               </p> </text> </div>
 
            <div class="py-4">
@@ -58,10 +69,10 @@ const last_posts = posts.slice(0, 3);
 
         <HorizontalCard
           title="Pesticide Exposure Assessment of the Swiss Sensitive Population"
-          img="/Tmap.png"
+          img="/p11.png"
           desc="Keywords: Environmental Contaminants, Pesticides, Toxicology, Exposure Assessment, Bio-samples, Exposure Mixtures, Exposure Sources, Endocrine Disruptors, Risk Assessment, Environmental Science."
-          id="p1" 
-          url="/p1/"
+          id="p11" 
+          url="/p11/"
         />
 
 
