--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ const last_posts = posts.slice(0, 3);
 
     <div class="pb-12 mt-5">
           <div class="text-4xl font-bold">David Lopez Rodriguez, PhD</div>
-          <div class="text-2xl py-2 font-bold">Research Fellow - University of Lausanne & Independent Consultant </div>
+          <div class="text-2xl py-2 font-bold">Research Fellow (University of Lausanne, Switzerland) & Independent Consultant </div>
 
 
           <div class="py-2"><text class="text-lg"> <p align="justify">
